RESOLVED FIXED162246
[WinCairo] Not building since 206044
https://bugs.webkit.org/show_bug.cgi?id=162246
Summary [WinCairo] Not building since 206044
Christopher Reid
Reported 2016-09-19 17:07:25 PDT
CookieJarCurl.cpp was failing to compile due to some string builder changes. Also JSWebGLRenderingContextCustom.cpp was failing to link due to this error: WebCore.lib(JSWebGLRenderingContextCustom.obj) : error LNK2001: unresolved external symbol "private: void * __cdecl JSC ::Heap::allocateObjectOfType<class JSC::Structure>(unsigned __int64)" (??$allocateObjectOfType@VStructure@JSC@@@Heap@JS C@@AEAAPEAX_K@Z)
Attachments
Patch (2.16 KB, patch)
2016-09-19 17:13 PDT, Christopher Reid
no flags
Patch (2.20 KB, patch)
2016-09-19 17:31 PDT, Christopher Reid
achristensen: review-
New patch to remove temporary strings as suggested (2.29 KB, patch)
2016-09-20 11:19 PDT, Christopher Reid
no flags
Christopher Reid
Comment 1 2016-09-19 17:13:10 PDT
WebKit Commit Bot
Comment 2 2016-09-19 17:15:39 PDT
Attachment 289288 [details] did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSWebGLRenderingContextCustom.cpp:34: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Christopher Reid
Comment 3 2016-09-19 17:31:52 PDT
Alex Christensen
Comment 4 2016-09-19 18:28:15 PDT
Comment on attachment 289290 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=289290&action=review > Source/WebCore/platform/network/curl/CookieJarCurl.cpp:226 > - cookieStr.append(cookieName + "\t"); > + cookieStr.append(String(domain + "\t")); What's this? If this is necessary, we should call append twice instead of appending the result of allocating a string, copying two strings, then appending it.
Christopher Reid
Comment 5 2016-09-20 11:19:32 PDT
Created attachment 289389 [details] New patch to remove temporary strings as suggested
Christopher Reid
Comment 6 2016-09-20 11:19:49 PDT
For reference the error we're seeing with CookieJarCurl is: Source\WebCore\platform\network\curl\CookieJarCurl.cpp(226): error C2668: 'WTF::StringBuilder::append': amb iguous call to overloaded function The ambiguous calls are WTF::StringBuilder::append(const WTF::AtomicString&) and WTF::StringBuilder::append(const WTF::String&)
WebKit Commit Bot
Comment 7 2016-09-20 12:13:51 PDT
Comment on attachment 289389 [details] New patch to remove temporary strings as suggested Clearing flags on attachment: 289389 Committed r206163: <http://trac.webkit.org/changeset/206163>
WebKit Commit Bot
Comment 8 2016-09-20 12:13:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.