[WinCairo]  Not building since 206044 https://bugs.webkit.org/show_bug.cgi?id=162246

Patch by Christopher Reid <Christopher.Reid@am.sony.com> on 2016-09-20
Reviewed by Alex Christensen.

No new tests. No change in behaviour.

* bindings/js/JSWebGLRenderingContextCustom.cpp:
* platform/network/curl/CookieJarCurl.cpp:

Canonical link: https://commits.webkit.org/180315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206163 268f45cc-cd09-0410-ab3c-d52691b4dbfc