Source/WebCore/bindings/js/JSWebGLRenderingContextCustom.cpp
@@ -30,6 +30,7 @@
 #include "DOMWrapperWorld.h"
 #include <JavaScriptCore/JSCellInlines.h>
 #include <JavaScriptCore/StructureInlines.h>
+#include <heap/HeapInlines.h>
 #include <heap/SlotVisitorInlines.h>
 
 using namespace JSC;
